new banner added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       crossorigin="anonymous"
     />
     <!-- for fontawesome -->
-    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
+    ></script>
     <title>Playing With Html & CSS</title>
   </head>
   <body>
@@ -21,8 +24,8 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <div>
-              <input type='checkbox' class="checkbox" id="checkbox">
-              <label for='checkbox' class="label-checkbox">
+              <input type="checkbox" class="checkbox" id="checkbox" />
+              <label for="checkbox" class="label-checkbox">
                 <i class="fas fa-moon"></i>
                 <i class="fas fa-sun"></i>
                 <div class="ball"></div>
@@ -37,8 +40,19 @@
       <section class="section pt-5">
         <div class="container">
           <div class="row">
-            <div class="col-12">
-              12
+            <div class="col-12 d-flex justify-content-center mb-4">
+              <img
+                class="home-banner"
+                src="./assests/home-banner3.svg"
+                alt="home-banner"
+              />
+            </div>
+            <div class="col-12 mt-5 banner-para">
+              <h2 class="banner-heading">Hi, I am Aaquib</h2>
+              <p class="banner-subtitle">
+                Welcome to playground where, I make variety of components and
+                pages with completely different styles and UI.
+              </p>
             </div>
           </div>
         </div>
@@ -47,7 +61,7 @@
 
     <!-------------------------------------------- Script  ---------------------------------------------------------->
     <!------------- Internal Js  ------------>
-    <script src='./app.js'></script>
+    <script src="./app.js"></script>
     <!------------- Bootstrap  ------------>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
