add different sections

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </ul>
       </div>
     </nav>
-
+    <!------------------------------------------- Sections --------------------------------------------------->
     <main>
-      <section class="section pt-5">
+      <section class="section pt-5 h-100 pb-5">
         <div class="container">
           <div class="row">
             <div class="col-12 d-flex justify-content-center mb-4">
@@ -47,13 +47,48 @@
                 alt="home-banner"
               />
             </div>
-            <div class="col-12 mt-5 banner-para">
+            <div class="col-12 mt-5">
               <h2 class="banner-heading">Hi, I am Aaquib</h2>
-              <p class="banner-subtitle">
-                Welcome to playground where, I make variety of components and
-                pages with completely different styles and UI.
+              <h4 class="banner-subtitle">
+                I am a Front-End developer, Designer and Blogger
+              </h4>
+              <p class="banner-para">
+                I love designing attractive UI and learn new stack, I have been
+                coding since 4 years practicing different languages, getting hands on c++,
+                Python and Js. And finally stumbled upon web development and
+                fell in love with it. I tend to use mordern technologies and
+                stack to make stunning design, which not only looks good but works perfectly !!
               </p>
             </div>
+            <div class="col-12 mt-5">
+              <div class="social-icons">
+                <i class="icons fas fa-globe"></i>
+                <i class="icons fab fa-twitter"></i>
+                <i class="icons fab fa-linkedin-in"></i>
+                <i class="icons fab fa-github"></i>
+                <i class="icons fas fa-rss"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!------------------------------------------- Section 2 --------------------------------------------------->
+      <section class="section pt-5">
+        <div class="container">
+          <h2 class="d-flex justify-content-center">Projects</h2>
+          <p class="d-flex justify-content-center project-subtitle">
+            Welcome to playground where, I make variety of components and pages
+            with completely different styles and UI.
+          </p>
+          <div class="row pt-5">
+            <h4 class="d-flex justify-content-center pt-5 pb-5">Components</h4>
+            <div class="col-6">hi</div>
+            <div class="col-6">hi</div>
+          </div>
+          <div class="row pt-5 pb-5">
+            <h4 class="d-flex justify-content-center pt-5 pb-5">Pages</h4>
+            <div class="col-6">hi</div>
+            <div class="col-6">hi</div>
           </div>
         </div>
       </section>
