--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           </div>
           <div class="row pt-5 pb-5">
             <h4 class="d-flex justify-content-center pt-5 pb-5">Pages</h4>
-            <div class="col-6">hi</div>
+            <div class="col-6">
+              <a href='/pages/mintech/index.html'>Min Tech</a>
+            </div>
             <div class="col-6">hi</div>
           </div>
         </div>
